IDEA-313962: MavenProject.isNew internal method
GitOrigin-RevId: 2cfc6985e5cbefb0c40223f148f402bf365207af